--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="section">
             <h2>Welcome!</h2>
             <p>
-I’m Erzsébet Börcsök, but you can call me Elizabeth. With nine years of experience as a librarian and over a decade since founding my 'EB Design' brand, I’ve developed a diverse skill set that inspired me to evolve my vision into EB Design&Tech.
+I am Erzsébet Börcsök, but you can call me Elizabeth. With nine years of experience as a librarian and over a decade since founding my 'EB Design' brand, I’ve developed a diverse skill set that inspired me to evolve my vision into EB Design&Tech.
 </b>
 As a freelancer and sole proprietorship owner based in Hungary, I’ve embraced opportunities across graphic design, data annotation, data analysis, interviewing, ads quality rating, research, and localization translation. This broad experience has given me a unique perspective, blending creativity with technical expertise.
 </b>
