--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="section">
             <h2>Welcome!</h2>
             <p>
-<p style="text-align: justify;">
+<p style="text-align: justify">
     I am Erzsébet Börcsök, but you can call me Elizabeth. With nine years of experience as a librarian and over a decade since founding my 'EB Design' brand, I’ve developed a diverse skill set that inspired me to evolve my vision into EB Design&Tech.<br>
     <strong>As a freelancer and sole proprietorship owner based in Hungary, I’ve embraced opportunities across graphic design, data annotation, data analysis, interviewing, ads quality rating, research, and localization translation.</strong> This broad experience has given me a unique perspective, blending creativity with technical expertise.<br>
     Being independent allows me to continuously seek new challenges and opportunities for growth. I am always eager to expand my skills, tackle complex problems, and connect research with innovative solutions.
