--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Erzsébet Börcsök – Research Engineer Portfolio</title>
+    <title>EB Design&Tech</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    <h1>Welcome to EB Design&Tech</h1>
+ <div class="container">
         <h1>Erzsébet Börcsök – Research Engineer Portfolio</h1>
         <div class="section">
             <h2>Welcome!</h2>
@@ -15,7 +22,7 @@
     <strong>As a freelancer and sole proprietorship owner based in Hungary, I’ve embraced opportunities across graphic design, data annotation, data analysis, interviewing, ads quality rating, research, and localization translation.</strong> This broad experience has given me a unique perspective, blending creativity with technical expertise.<br>
     Being independent allows me to continuously seek new challenges and opportunities for growth. I am always eager to expand my skills, tackle complex problems, and connect research with innovative solutions.
 </p>
-        </div>
+    </div>
         <div class="section">
             <h2>👩‍💻 About Me</h2>
             <ul class="skills-list">
@@ -70,5 +77,11 @@
             </p>
         </footer>
     </div>
-</body>
+    </body>
+<footer>
+    <p>
+        Made by Erzsébet Börcsök (Elizabeth) — EB Design&Tech<br>
+        e-mail: <a href="mailto:ebdesign.graphics@gmail.com">ebdesign.graphics@gmail.com</a>
+    </p>
+</footer>
 </html>
