--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="section">
             <h2>📚 Publications & Contributions</h2>
-            <p>I was a good practitioner in 2019 as a librarian. I have experiences as a non-formal librarian educator. I have been teaching digital and librarian skills for children.</p>
+            <p>I was a good practitioner in 2019 as a librarian. I have experiences as a non-formal librarian educator. I have been teaching digital and librarian skills for children. I gained the following certifications: Create interactive reports using Copilot for Power BI Microsoft Learn, Discover Data Analysis Microsoft Learn, Python Basics by Kaggle, Linguistic Prompt Design Training by RWS, Intro to Machine Learning by Kaggle, Intro to Programming by Kaggle.</p>
         </div>
         <div class="section">
             <h2>🎓 Education & Certifications</h2>
