--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     <div class="section">
         <h2>📚 Publications & Contributions</h2>
         <p style="text-align: justify;">
-            In 2019, I was recognized as a skilled practitioner in librarianship. My experience includes non-formal librarian education, teaching digital and library skills to children, and supporting lifelong learning initiatives.<br><br>
-            <strong>Certifications:</strong>
-            <ul>
-                <li>Create Interactive Reports using Copilot for Power BI — Microsoft Learn</li>
-                <li>Discover Data Analysis — Microsoft Learn</li>
-                <li>Python Basics — Kaggle</li>
-                <li>Linguistic Prompt Design Training — RWS</li>
-                <li>Intro to Machine Learning — Kaggle</li>
-                <li>Intro to Programming — Kaggle</li>
-            </ul>
+            In 2019, I was recognized as a skilled practitioner in librarianship. My experience includes non-formal librarian education, teaching digital and library skills to children, and supporting lifelong learning initiatives.
         </p>
+        <p><strong>Certifications:</strong></p>
+        <ul>
+            <li>Create Interactive Reports using Copilot for Power BI — Microsoft Learn</li>
+            <li>Discover Data Analysis — Microsoft Learn</li>
+            <li>Python Basics — Kaggle</li>
+            <li>Linguistic Prompt Design Training — RWS</li>
+            <li>Intro to Machine Learning — Kaggle</li>
+            <li>Intro to Programming — Kaggle</li>
+        </ul>
     </div>
     <div class="section">
         <h2>👩‍💻 About Me</h2>
